Update user statistics route, update swagger
